--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@ static boolean no(BinaryTree node) {
         <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
         <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
         <th width="44"></th>
-        <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
-        <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
+        <th></th>
+        <th></th>
     </thead>
     </table>
 
@@ -467,9 +467,9 @@ static boolean no(BinaryTree node) {
          <td>
             <table align="center" border="1px" cellpadding="6" cellspacing="0" bgcolor="dddddd">
                 <thead>
-                    <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
-                    <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
-                    <th width="44">                                                                                                   </th>
+                    <th>"."</th>
+                    <th>"."</th>
+                    <th width="44">"."</th>
                     <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
                     <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
                 </tr>
@@ -484,9 +484,9 @@ static boolean no(BinaryTree node) {
         <td>
            <table align="center" border="1px" cellpadding="6" cellspacing="0" bgcolor="dddddd">
                <thead>
-                   <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
+                   <th>.</th>
                    <th width="44"></th>
-                   <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
+                   <th>"."</th>
                    <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
                    <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
                </tr>
@@ -502,9 +502,9 @@ static boolean no(BinaryTree node) {
         <td>
            <table align="center" border="1px" cellpadding="6" cellspacing="0" bgcolor="dddddd">
                <thead>
-                   <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
+                   <th>"."</th>
                    <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
-                   <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
+                   <th>"."</th>
                    <th width="44"></th>
                    <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
                </tr>
@@ -521,10 +521,10 @@ static boolean no(BinaryTree node) {
         <td>
            <table align="center" border="1px" cellpadding="6" cellspacing="0" bgcolor="dddddd">
                <thead>
-                   <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
+                   <th>"."</th>
                    <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
                    <th width="44"></th>
-                   <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
+                   <th>"."</th>
                    <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
                </tr>
                </thead>
@@ -543,7 +543,7 @@ static boolean no(BinaryTree node) {
                <thead>
                    <th width="44"></th>
                    <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
-                   <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
+                   <th>"."</th>
                    <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/black-ball.gif"></th>
                    <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
                </tr>
