--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@ static boolean no(BinaryTree node) {
 
 <table align="center" border="1px" cellpadding="6" cellspacing="0" bgcolor="dddddd">
     <thead>
-        <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
-        <th><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
-        <th width="44">                                                                                                   </th>
+        <th width="44"><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
+        <th width="44"><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>
+        <th width="44"><img src="https://miro.medium.com/max/420/1*u3N1gbD0gm9JZjAaDiQY5Q.png"></th>                                                                                              </th>
         <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
         <th><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/white-ball.gif"></th>
     </thead>
